[gd_scene load_steps=2 format=3 uid="uid://bnqpgsjn4d1rt"]

[ext_resource type="Script" path="res://scripts/login.gd" id="1_1ia2i"]

[node name="Login" type="Node2D"]
script = ExtResource("1_1ia2i")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 176.0
offset_top = 104.0
offset_right = 476.0
offset_bottom = 204.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LabelTitleLogin" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ingresa tu nombre"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LineEditInput" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "username"

[node name="ButtonLogin" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Acceder"

[node name="LabelError" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/LineEditInput" to="." method="_on_line_edit_input_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonLogin" to="." method="_on_button_login_pressed"]
